Add extra logging to `NoIndexLossAfterSplitBrainHealTest` to try to catch flakey test root cause [HZ-3851] (#700)
`com.hazelcast.map.merge.NoIndexLossAfterSplitBrainHealTest` is
[flakey](https://github.com/hazelcast/hazelcast/issues/25725), but is so
intermittent I am unable to reproduce locally more than once.

I've updated the test to:
- Log more information
- Ensure a randomised, non-overlapping `MAP_NAME` is used
- Added extra assertions in logical steps between:
   - Does the map have `N` entries
   - Is the size of the result of predicate `Y`, `N`

This is to try to give a smaller problem space if/when if it comes up
again.

Fixes: [HZ-3851](https://hazelcast.atlassian.net/browse/HZ-3851)

[HZ-3851]:
https://hazelcast.atlassian.net/browse/HZ-3851?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

---------

Co-authored-by: James Holgate <130981049+JamesHazelcast@users.noreply.github.com>
GitOrigin-RevId: bab236709af253e05aa22e35bdee3f373ee5f8ee